#77501 - Fix modal overflow

--- a/Snowdog_Components/components/Organisms/modal/_modal.scss
+++ b/Snowdog_Components/components/Organisms/modal/_modal.scss
@@ -68,7 +68,6 @@
         box-shadow: $modal__container-box-shadow;
         background-color: $modal__container-background-color;
         animation: $modal__container-animation;
-        overflow: auto;
 
         @include mq($screen-m) {
             padding: $modal__container-padding\@medium;
@@ -77,6 +76,7 @@
 
     &__cookies-container {
         max-width: $modal__cookies-container-max-width;
+        overflow-y: auto;
     }
 
     &__content {
